tests/negative/match_struct_bad_field.sans
struct Point { x:I y:I }
main() I {
  pt = Point { x: 1, y: 2 }
  match pt {
    Point { x, z } => x + z
  }
  0
}
